# roi-uncc-mcp

./: .gitignore  API.txt  ARCHITECTURE_WORKFLOW.md  ATTACK_SCENARIO_DEMO.md  DOCKER_FILES_USAGE.md  Dockerfile  Dockerfile.mcp  PROJECT_STATUS.md  README.md  demo_attack_scenario.py  demo_docker.py  demo_launcher.py  docker-compose.demo.yml  docker-compose.yml  run_demo.sh
config/: aurora_inspired_attack.yaml  coordinated_substation_attack.yaml  demo_config.yaml  ukraine_inspired_attack.yaml
config/examples/: anthropic_config.yaml  local_qwen_config.yaml  ollama_config.yaml  openai_config.yaml
containers/apptainer/: cosim-toolchain.def
containers/docker/: DOCKER_BUILD_FIXES.md  Dockerfile
containers/docker/with-helics-2.2.2/: Dockerfile
demo_results/: ai_campaign_20250701_101715.json  app.js  gld_cosim_right.csv  gpk.csv  index.html  reg1_output.csv  style.css  test_timeline.html
examples/2bus-13bus/: CMakeLists.txt  IEEE13bus.glm  Tr2bus.raw  build.sh  gld_cosim_right.csv  gpk-gld-cosim.json  gpk-left-fed.cpp  gridlabd.xml  input.xml  mainglm.json  pf_app.hpp  reg1_output.csv
examples/GridPACK/contingency_analysis/: CMakeLists.txt
examples/GridPACK/dynamic_simulation_dae/: CMakeLists.txt
examples/GridPACK/dynamic_simulation_full_y/: CMakeLists.txt  build.sh
examples/GridPACK/hello/: CMakeLists.txt
examples/GridPACK/kalman_ds/: CMakeLists.txt
examples/GridPACK/powerflow/: CMakeLists.txt  CMakeLists.txt.orig  oneline.raw
examples/GridPACK/resistor_grid/: CMakeLists.txt
examples/GridPACK/state_estimation/: CMakeLists.txt
examples/lc-tank/cpp/: Capacitor.cpp  Inductor.cpp  lc-tank-cpp.json
examples/lc-tank/python/: Capacitor.py  Inductor.py  README.md  lc_tank_cosim.json
examples/pf-cosim/: gld-gld-cosim.json  gpk-gld-cosim.json  input.xml  oneline.raw  pf-cosim.json  visualizer.py
examples/pf-cosim/gld/: gpk-gld-right-fed.json  gridlabd-full-fed.json  gridlabd-left-fed.json  gridlabd-right-fed.json  left-oneline.glm  oneline-right-w-gpk.glm  oneline.glm  right-oneline.glm
examples/pf-cosim/gpk/: CMakeLists.txt  gpk-left-fed.cpp  pf_app.cpp
examples/pf-cosim/pypower/: pf-full-fed.py  pf-left-fed.py  pf-right-fed.py  pf.py
examples/simple-cosim/: 2_bus_transmission_system.dyr  2_bus_transmission_system.raw  README.md  Summary.docx  cleaned_load_data.csv  gridlabd.xml  gridpack_fed.json  gridpack_federate.cpp  gridpack_input_2_bus.xml  load.py  load_current_data.csv  load_current_data.txt  load_data.csv  main.glm  mainglm.json  plot_load_current.py  plot_load_data.py  substation_data.csv  sw_data.csv  switch_controller.py  switch_cosim_runner.json  testmetrics.txt  testout.txt
mcp-server/: requirements.txt
mcp-server/config/: mcp.yaml  threat_model.yaml
mcp-server/docs/: ARCHITECTURE.md  MCP_PRIMITIVES.md
mcp-server/src/: federate.py  server.py
mcp-server/src/ai/: local_llm_client.py
mcp-server/src/attacks/: __init__.py  attack_engine.py
mcp-server/src/monitor/: __init__.py  grid_monitor.py
mcp-server/src/utils/: validation.py
old_docs/: AI-INTEGRATION.md  ATTACK-PRIMITIVES.md  README.md  RESEARCH-GUIDE.md
